XP Framework Build System ChangeLog
========================================================================
$Id$

Version ?-?-?, released ????-??-??
----------------------------------

Version 1.2.3, released 2011-04-07
----------------------------------

Heads up!
---------
- Implemented using different resolvers for each build type; these resolvers
  must really exist for the build to happen.
  (kiesel)

Features
--------
- Made snapshots build as -SNAPSHOT
  (kiesel)
- Made installer clean old installation before installing new one
  (kiesel)


Version 1.2.2, released 2011-04-06
----------------------------------

Features
--------
- Maven pom.xml will now be named [module]-[revision].pom
  (kiesel)
- Prefer local path over dependencies' class path
  (kiesel)

Version 1.2.1, released 2011-04-01
----------------------------------

Bugfixes
--------
- Fixed bug w/ difference in legacy project layout and
  maven-style layout
  (kiesel)


Version 1.2, released 2011-03-29
----------------------------------

Bugfixes
~~~~~~~~
- Fixed autodetected for missing jars
  (kiesel)
- Fixed build on Windows
  (kiesel)

Features
~~~~~~~~
- Made build only generate .xar for tests, if tests exist
  (kiesel)
- Introduced new type "bootstrap" for artifacts
  (kiesel)
- Added build-app.xml to create application artifacts
  (kiesel)
- Implemented updating an svn tag with application artifact
  (kiesel)


Version 1.1, released 2011-03-04
----------------------------------

Features
~~~~~~~~
- More features implemented
  (kiesel)


Version 1.0, released 2011-02-24
----------------------------------

Features
~~~~~~~~
- Initial revision
  (kiesel)